fix word wrap for the tweet lists

--- a/sass/tweet-list.scss
+++ b/sass/tweet-list.scss
@@ -46,6 +46,7 @@
 
   &__text {
     margin-left: 2rem;
+    word-wrap: break-word;
   }
 }
 
